<resources>
    <string name="str_orange">#fe7b27</string>
    <string name="basic_action_1">删除</string>
    <string name="add">添加</string>
    <string name="basic_action_2">Action_2</string>
    <string name="app_name">迈界</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home">首页</string>
    <string name="secretary">私人秘书</string>
    <string name="found">发现</string>
    <string name="mine">我的</string>
    <string name="content_is_loading">内容正在加载...</string>
    <string name="shopping_carnival">购物狂欢</string>
    <string name="travel_holiday">旅行度假</string>
    <string name="dining">美食餐饮</string>
    <string name="courtesy_car">汽车礼遇</string>
    <string name="life_service">生活服务</string>
    <string name="life_quality">高质生活</string>
    <string name="entertainment">休闲娱乐</string>
    <string name="integral">积分兑换</string>
    <string name="investment">投资理财</string>
    <string name="please_enter_search_brand">请输入您感兴趣的品牌</string>
    <string name="home_hot_v16">热门活动推荐</string>
    <string name="cancle">取消</string>
    <string name="changecity">城市切换</string>
    <string name="green_point_counts">99+</string>
    <string name="hot_search">热门搜索</string>
    <string name="history_search">历史搜索</string>
    <string name="all_clear">全部清除</string>
    <string name="no_data">没有数据</string>
    <string name="lv_empty">没有找到合适的吗？</string>
    <string name="found_secretary">要不要找一下小秘书  ></string>
    <string name="activity_detail">活动详情</string>
    <string name="shop_infor">门店信息</string>
    <string name="join_activity_shop">参与此活动的分店</string>
    <string name="mai_comment">迈友评论</string>
    <string name="i_report">活动不靠谱，我要举报</string>
    <string name="store_detail">门店详情</string>
    <string name="hdpz">活动品质</string>
    <string name="mai_fs">迈友粉丝数：</string>
    <string name="store_activity_number">当前门店活动</string>
    <string name="look_mine_yhq">查看我的全部优惠券</string>
    <string name="all_clear_tip">您确定要全部清除吗？</string>
    <string name="money_icon">¥ </string>
    <string name="yhq_money">适用优惠券金额</string>
    <string name="gz_sucess">关注成功</string>
    <string name="gz_qx_sucess_content">取消关注成功</string>
    <string name="gz_qx_sucess_content_new">（╯^╰） 总裁大大~等您回来哟~~</string>
    <string name="gz_qx_faild_content">取消关注失败</string>
    <string name="sc_sucess">收藏成功哟</string>
    <string name="sc_sucess_cancle">取消收藏成功</string>
    <string name="sc_sucess_content_cancle">您已经成功取消收藏</string>
    <string name="sc_sucess_cancle_collection">迈界小贴士</string>
    <string name="sc_sucess_cancle_collection_new">取消收藏</string>
    <string name="sc_sucess_content_cancle_collection">取消收藏</string>
    <string name="sc_sucess_content_cancle_collection_new">小迈期待您找到更中意的活动哦</string>
    <string name="gz_sucess_title">关注成功</string>
    <string name="gz_sucess_content">您可在“发现/门店关注”中查看\n还可自行设置门店的活动推送功能</string>
    <string name="gz_sucess_content1">您可在“发现/门店关注”中查看</string>
    <string name="gz_faild_content">关注失败，请稍后尝试\n</string>
    <string name="sc_sucess_content">您可在“发现/活动收藏”中查看\n</string>
    <string name="all_stroes">查看所有分店</string>
    <string name="check_all">查看所有分店</string>
    <string name="all_join_stroes">参与此活动的分店</string>
    <string name="mai_communicate">迈友评论回复 （%1$s）</string>
    <string name="try_speech">试试语音输入吧，更方便哦~</string>
    <string name="wx_friend">微信好友</string>
    <string name="friend_c">朋友圈</string>
    <string name="qq_friend">QQ好友</string>
    <string name="tx_wb">腾讯微博</string>
    <string name="xl_wb">新浪微博</string>
    <string name="total_read">Are you 确定?将所有消息置为已读~</string>
    <string name="rapley_counts">回复(%1$s)</string>
    <string name="rapley_counts1">全部回复(%1$s)</string>
    <string name="tele_address">地址：%1$s</string>
    <string name="images_count">共%1$s张</string>
    <string name="tele_address2">办公地址：%1$s</string>
    <string name="telephone"><Data><![CDATA[<font color="#6F6F6F">联系电话： </font>%1$s]]></Data></string>
    <string name="telephone_nothave_now"><Data><![CDATA[<font color="#6F6F6F">联系电话：%1$s </font>]]></Data></string>
    <string name="home_list_exception"><Data><![CDATA[网络异常，请<font color="#9DC14F">%1$s</font>或重新进入]]></Data></string>
    <string name="all_desc"><Data>回复<![CDATA[<font color="#9DC14F">@%1$s </font>:%2$s]]></Data></string>
    <string name="telephone2"><Data><![CDATA[<font color="#6F6F6F">电话: </font>%1$s]]></Data></string>
    <string name="reply_green"><Data><![CDATA[<font color="#9DC14F"> 回复 </font>]]></Data></string>
    <string name="reply_desc"><Data><![CDATA[<font color="#9DC14F"> @%1$s </font>]]></Data></string>
    <string name="all_store">查看所有分店</string>
    <string name="xy_card">银行卡</string>
    <string name="yhq">优惠券</string>
    <string name="message_center">消息中心</string>
    <string name="total_message_isread">全部已读</string>
    <string name="mine_secretary">我的私人秘书</string>
    <string name="mine_history">最近浏览</string>
    <string name="mine_comments">我的评论</string>
    <string name="about">服务中心</string>
    <string name="shared_app">分享APP</string>
    <string name="click_register_login">点击注册/登陆</string>
    <string name="login">登录</string>
    <string name="card_login">点击注册登录</string>
    <string name="register">注册</string>
    <string name="register_click">点击注册</string>
    <string name="register_click_first">初次到来，点击注册</string>
    <string name="dai_use">待使用</string>
    <string name="used">已使用</string>
    <string name="failure">已失效</string>
    <string name="coupon_money">¥</string>
    <string name="shengyu_day_num">剩余<Data><![CDATA[<font color="#FAD30F">%1$s</font>]]></Data>天</string>
    <string name="enter_phone">输入手机号</string>
    <string name="enter_re_code">输入验证码</string>
    <string name="enter_pwd">输入密码</string>
    <string name="send_recode">获取验证码</string>
    <string name="person_info">个人信息</string>
    <string name="mine_head">头像</string>
    <string name="mine_nickname">昵称</string>
    <string name="mine_reset_pwd">重置登录密码</string>
    <string name="mine_phone">手机号码</string>
    <string name="mine_edit_person_info">完善个人信息</string>
    <string name="mine_qr_code">我的二维码</string>
    <string name="edit">编辑</string>
    <string name="activity">活动</string>
    <string name="maijie">迈界</string>
    <string name="all">全部</string>
    <string name="just_collect_store">您只关注了以上的门店哦</string>
    <string name="just_collect_acts">您只收藏了以上的活动哦</string>
    <string name="about_curr_act">涉及此活动的门店只有这么多哦</string>
    <string name="just_watch_acts">您最近仅浏览了这么多的活动哦</string>
    <string name="just_watch_store">您最近仅浏览了这么多的门店哦</string>
    <string name="just_curr_bankcard">该关键字下的银行卡暂时只有这么多哦</string>
    <string name="add_bankcard">您添加的银行卡目前只有这么多哦</string>
    <string name="reach_bottom">到底啦~</string>
    <string name="not_more">该关键词下暂时只有这么多活动哦</string>
    <string name="collect_more_superise">小迈会加油搜集更多惊喜哦</string>
    <string name="setting">设置</string>
    <string name="setting_clear_cache">清空缓存</string>
    <string name="feedback">意见反馈</string>
    <string name="help_center">帮助中心</string>
    <string name="tel">拨打</string>
    <string name="btn_photo_take">照相机</string>
    <string name="btn_photo_select">相册</string>
    <string name="save">保存</string>
    <string name="nickname_tip">好名字可以让你的朋友更容易记住你。</string>
    <string name="edit_nick_name">更改昵称</string>
    <string name="commit">提交</string>
    <string name="command_content_8">领取他人分享的红包无上限哦</string>
    <string name="command_content_7">赶紧招呼伙伴们来抢红包</string>
    <string name="command_content_6">相互分享机会更多哦~</string>
    <string name="command_content_5">赶紧告诉好友一起来抢</string>
    <string name="command_content_4">分享微信好友群组，好友继续领</string>
    <string name="command_content_3">记得也将这份好运分享给好友哟~</string>
    <string name="command_content_1">赶紧去迈界微信服务号输入口令兑换吧！</string>
    <string name="command_content_2">公众号搜索“<Data><![CDATA[<font color="#DB1F1F">%1$s</font>]]></Data>”或“<Data><![CDATA[<font color="#DB1F1F">%2$s</font>]]></Data>”</string>
    <string name="reset_pwd">重置登录密码</string>
    <string name="new_pwd">新密码 ：</string>
    <string name="re_new_pwd">确认新密码 ：</string>
    <string name="confirm">确认</string>
    <string name="confirm_update"> 点击升级哦  </string>
    <string name="i_know">立即设置</string>
    <string name="email">邮箱</string>
    <string name="truname">姓名</string>
    <string name="address">地址</string>
    <string name="edit_user_address">地址：</string>
    <string name="job">职业</string>
    <string name="position">职位</string>
    <string name="degrees">学历</string>
    <string name="like">爱好</string>
    <string name="income">收入</string>
    <string name="edit_person_info">完善个人信息</string>
    <string name="exit_login">退出登录</string>
    <string name="replay">回复@</string>
    <string name="store">门店</string>
    <string name="qmyo_version">迈界 V</string>
    <string name="qmyo_desc">收集世界各地惊喜\n伴随迈友走遍世界</string>
    <string name="qmyo_wx">迈界微信公众号：<Data><![CDATA[<font color="#9DC14F">qmyoservice</font>]]></Data></string>
    <string name="qmyo_net">迈界官网：<Data><![CDATA[<font color="#9DC14F">www.qmyo.com</font>]]></Data></string>
    <string name="qmyo_jianjie">迈界简介</string>
    <string name="feedback_desc">欢迎你提出宝贵的意见与建议，收到您的反馈以后，我们将尽快3-7个工作日内回复您，届时请您查看“我的”信息信箱(500字以内)</string>
    <string name="hd_feedback">活动反馈</string>
    <string name="sh_feedback">商户反馈</string>
    <string name="yhk_feedback">银行卡问题反馈</string>
    <string name="js_feedback">技术反馈</string>
    <string name="qt_feedback">其他反馈</string>
    <string name="feedback_tip">\u3000亲爱的迈友，您的意见对迈界非常重要，\n是我们一直致力于开发体验感最强平台的动力。</string>
    <string name="please_enter_feedback">请输入您的反馈建议（500字以内）</string>
    <string name="store_detail_count"><Data><![CDATA[<font color="#939393">%1$s</font>/%2$s]]></Data></string>
    <string name="cache_size">%1$sM</string>
    <string name="tip">提示</string>
    <string name="tip_send_question">~（*^﹏^*）~</string>
     <string name="tip_attentionstore">总裁大大，想要关注门店得先登录哟</string>
     <string name="tip_activittiescollection">总裁大大，想要收藏活动得先登录哟</string>
    <string name="tip5">登录中... </string>
     <string name="tip4">总裁大大，迈界欢迎您</string>
    <string name="tip1">关注成功哟</string>
    <string name="tip2">迈界小贴士</string>
    <string name="tip_qx_gz">取消关注</string>
     <string name="tip3">手机号或密码错误</string>
     <string name="tip_pswnotenter">密码未输入</string>
     <string name="tip_phonenotenter">手机号未输入</string>
     <string name="tip_setcodeerror">验证码不正确哦</string>
     <string name="tip_setpwderror">密码设置不正确哦</string>
    <string name="logintocomplain">总裁大大，投诉要登录的哟</string>
    <string name="logintocollectactivity">总裁大大，想要收藏得先登录哟</string>
     <string name="logintofllow">汝若心愿成粉，还请速速登录哟</string>
    <string name="remove_cache_tip">您确定要清空缓存？</string>
    <string name="publish">发表</string>
    <string name="new_comment_tip">亲爱的迈友您好，请简单评论下您此次参与活动的感受，店员服务满意吗？活动是否对您有帮助？</string>
    <string name="new_comment_tip2">总裁大大，请发表您的评论吧~~</string>
    <string name="upload_photo">上传图片</string>
    <string name="wait_input_counts">您还剩 15个字等待输入</string>
    <string name="navigation">导航</string>
    <string name="currentCard">当前信用卡</string>
    <string name="otherCard">其他银行卡</string>
    <string name="forget_password">忘记密码 ?</string>
    <string name="gender">性别</string>
    <string name="like_desc">可多选</string>
    <string name="ok">确定</string>
    <string name="wheelview_text">省名</string>
    <string name="report_content">举报内容(0~100字)</string>
    <string name="please_enter_content">请输入内容</string>
    <string name="please_select_one">请选择一项</string>
    <string name="shared_app_desc">邀请好友直接扫描二维码下载迈界APP</string>
    <string name="political">政治内容</string>
    <string name="obscene">淫秽色情</string>
    <string name="dirty">粗话脏话</string>
    <string name="privacy">泄露隐私</string>
    <string name="advertising">恶意广告</string>
    <string name="other">其他原因</string>
</resources>