<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_hot_history"
    style="@style/w_match_h_match"
    android:background="#EBEBEB"
    android:orientation="vertical" >

    <TextView
        style="@style/text_style_nomal_28"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/hot_search"
        android:textColor="#AFAFAF" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/search_gv_list"
        style="@style/w_full_h_wrap"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="12dp" />

    <TextView
        android:id="@+id/history_tv"
        style="@style/text_style_nomal_28"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/history_search"
        android:textColor="#AFAFAF" 
        android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/lv_search_history"
        style="@style/w_full_h_wrap"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp" 
         android:visibility="gone">
	</android.support.v7.widget.RecyclerView>
    <TextView
        android:id="@+id/tv_search_clear_all"
        style="@style/text_style_nomal_28"
        android:layout_gravity="center_horizontal"
        android:text="@string/all_clear"
        android:textColor="@color/app_green2" 
         android:visibility="gone"/>

</LinearLayout>