<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/w_full_h_wrap"
    android:orientation="vertical" 
    android:background="@color/app_bg">

    <include
        android:id="@+id/include1"
        layout="@layout/activity_com" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/app_white" >

        <LinearLayout
            style="@style/w_wrap_h_wrap"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/margin_top_70"
            android:layout_marginTop="@dimen/margin_top_50"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/ll_shared_wx_friend"
                style="@style/w_wrap_h_wrap"
                android:layout_marginLeft="@dimen/l_r_35"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <com.android.pc.ioc.image.RecyclingImageView
                    style="@style/w_wrap_h_wrap"
                    android:scaleType="fitXY"
                    android:src="@drawable/wx_friend" />

                <TextView
                    style="@style/text_style_small_24"
                    android:layout_marginTop="@dimen/margin_top_22"
                    android:singleLine="true"
                    android:text="@string/wx_friend" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rl_shared_friend"
                style="@style/w_wrap_h_wrap"
                android:layout_marginLeft="@dimen/l_r_14"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <com.android.pc.ioc.image.RecyclingImageView
                    style="@style/w_wrap_h_wrap"
                    android:scaleType="fitXY"
                    android:src="@drawable/wx_friend_c" />

                <TextView
                    style="@style/text_style_small_24"
                    android:layout_marginTop="@dimen/margin_top_22"
                    android:singleLine="true"
                    android:text="@string/friend_c" />
            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/ll_shared_qq_friend"
                style="@style/w_wrap_h_wrap"
                android:layout_marginLeft="@dimen/l_r_14"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <com.android.pc.ioc.image.RecyclingImageView
                    style="@style/w_wrap_h_wrap"
                    android:scaleType="fitXY"
                    android:src="@drawable/qq_friend" />

                <TextView
                    style="@style/text_style_small_24"
                    android:layout_marginTop="@dimen/margin_top_22"
                    android:singleLine="true"
                    android:text="@string/qq_friend" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_shared_tx_wb"
                style="@style/w_wrap_h_wrap"
                android:layout_marginLeft="@dimen/l_r_14"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <com.android.pc.ioc.image.RecyclingImageView
                    style="@style/w_wrap_h_wrap"
                    android:scaleType="fitXY"
                    android:src="@drawable/tx_wb" />

                <TextView
                    style="@style/text_style_small_24"
                    android:layout_marginTop="@dimen/margin_top_22"
                    android:singleLine="true"
                    android:text="@string/tx_wb" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_shared_sina_wb"
                style="@style/w_wrap_h_wrap"
                android:layout_marginLeft="@dimen/l_r_14"
                android:layout_marginRight="@dimen/l_r_35"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <com.android.pc.ioc.image.RecyclingImageView
                    style="@style/w_wrap_h_wrap"
                    android:scaleType="fitXY"
                    android:src="@drawable/xl_wb" />

                <TextView
                    style="@style/text_style_small_24"
                    android:layout_marginTop="@dimen/margin_top_22"
                    android:singleLine="true"
                    android:text="@string/xl_wb" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <com.android.pc.ioc.image.RecyclingImageView
        android:id="@+id/recyclingImageView1"
        android:layout_width="@dimen/qr_code_w_460"
        android:layout_height="@dimen/qr_code_h_460"
        android:layout_below="@+id/include1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_top_120"
        android:scaleType="fitXY"
        android:src="@drawable/share_app" />

    <TextView
        style="@style/text_style_nomal_28"
        android:layout_below="@+id/recyclingImageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_top_25"
        android:text="@string/shared_app_desc" />

</RelativeLayout>